@@ -13,6 +13,8 @@ git-annex (6.20160908) UNRELEASED; urgency=medium
   * Improve gpg secret key list parser to deal with changes in gpg 2.1.15.
     Fixes key name display in webapp.
   * stack.yaml: Update to lts-7.0 (ghc 8)
+  * info: Support being passed a treeish, and show info about the annexed
+    files in it similar to how a directory is handled.
 
  -- Joey Hess <id@joeyh.name>  Thu, 08 Sep 2016 12:48:55 -0400
 
